--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body { /* no . means element type */
 
 .container {
     max-width: none !important;
-   background-image: url(https://wallpapercave.com/dwp1x/wp8120802.jpg);
+   background-image: url('https://wallpapercave.com/dwp1x/wp8120802.jpg');
 }
  
 /*HIDE PARTS*/
