--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body { /* no . means element type */
 
 .container {
     max-width: none !important;
-   background-image: url('https://i.imgur.com/JSBUGEK.png');
+   background-image: url('https://i.imgur.com/AAqvy2Z.png');
 }
  
 /*HIDE PARTS*/
