--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ body { /* no . means element type */
 	border-width: 0.5px;
 }
 
+.about-container{
+	background-color:#e25822
+}
+
 .container {
     max-width: none !important;
    background-image: url('https://i.imgur.com/AAqvy2Z.png');
