--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body { /* no . means element type */
 }
 
 .about-container{
-	background-color:#e25822
+	background-color:#e25822;
+		opacity: 0;
 }
 
 .container {
