--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body { /* no . means element type */
 }
 
 .about-container{
-	background-color:#e25822;
+	max-width: none !important;
+	background-image: url('https://i.imgur.com/hEOmXQZ.jpg');
 }
 
 .container {
