--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body { /* no . means element type */
 
 .about-container{
 	max-width: none !important;
-	background-image: url('https://i.imgur.com/hEOmXQZ.jpg');
+	background-image: url('https://i.imgur.com/neqRlZ5.png');
 }
 
 .container {
