--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,7 @@ body { /* no . means element type */
 }
 
 .about-container{
-	max-width: none !important;
-	background-image: url('https://i.imgur.com/neqRlZ5.png');
+	background-color; #000000
 }
 
 .container {
