--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ body { /* no . means element type */
 }
  
 /*HIDE PARTS*/
+
+.PlayerIcon PlayerIcon-128 {
+	display: none !important;
+}
+
 .ratings-row {
 	display: none !important;
 }
