--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body { /* no . means element type */
 
 .container {
     max-width: none !important;
-   background-image: url('https://i.imgur.com/AAqvy2Z.png');
+   background-image: url('https://i.imgur.com/9xD2DTz.jpg');
 }
  
 /*HIDE PARTS*/
