--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body { /* no . means element type */
 }
 
 .about-container{
-	rgba(240, 85, 0, 0.3)
+	max-width: none !important;
+   background-image: url('https://i.imgur.com/6shPLPW.png');
 }
 
 .container {
