--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,9 @@ body { /* no . means element type */
      font-family: "papyrus", fantasy;
      color:rgba(104, 118, 243, 0.685);
     }
-
+.Card {
+	background-color:#e25822;
+}
 .avatar-subtext {
      font-size: 2em;
 }
