--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body { /* no . means element type */
 }
 
 .ratings-container{
-	background-color:#282828;
+	max-width: none !important;
+   background-image: url('https://i.imgur.com/bYP6uD7.jpg');
 	border: solid;
-	border-color: #606060;
 	border-width: 0.5px;
 }
 
