--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,11 @@ body { /* no . means element type */
      font-family: "papyrus", fantasy;
      color:rgba(104, 118, 243, 0.685);
     }
-.Card .about-container .about-markdown{
-	background-color:#e25822;
+.about-container .about-markdown{
+	max-width: none !important;
+   background-image: url('https://i.imgur.com/Uqys9Ng.png');
+	border: solid;
+	border-width: 0.5px;
 }
 .avatar-subtext {
      font-size: 2em;
