--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body { /* no . means element type */
     }
 .about-container .about-markdown{
 	max-width: none !important;
-   background-image: url('https://i.imgur.com/p5UxzWw.png');
+   background-image: url('https://i.imgur.com/Lbwy8Mx.png');
 	border: solid;
 	border-width: 0.5px;
 }
