--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,13 @@ body { /* no . means element type */
     max-width: none !important;
    background-image: url('https://i.imgur.com/AAqvy2Z.png');
 }
+
+.date .player .board_size .game_name {
+	font-family: "papyrus", fantasy;
+        color:rgba(64, 0, 0, 1) !important;
+}
+	
+	
  
 /*HIDE PARTS*/
 
