--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@ body { /* no . means element type */
      color:rgba(104, 118, 243, 0.685);
     }
 .about-container .about-markdown{
-	max-width: none !important;
-   background-image: url('https://i.imgur.com/vEnGrUj.jpg');
+   background-image: url('https://i.imgur.com/bAI8tzm.png');
+	width: 100% !important;
+        height: 100% !important;
 	border: solid;
 	border-width: 0.5px;
 }
