--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,19 @@ body { /* no . means element type */
    background-image: url('https://i.imgur.com/AAqvy2Z.png');
 }
 
-.date .player .board_size .game_name {
-	font-family: "papyrus", fantasy;
+.date {
+        color:rgba(64, 0, 0, 1) !important;
+}
+
+.player {
+        color:rgba(64, 0, 0, 1) !important;
+}
+
+.board_size {
+        color:rgba(64, 0, 0, 1) !important;
+}
+
+.game_name {
         color:rgba(64, 0, 0, 1) !important;
 }
 	
