--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body { /* no . means element type */
      color:rgba(104, 118, 243, 0.685);
     }
 .about-container .about-markdown{
-   background-image: url('https://i.imgur.com/bAI8tzm.png');
+   background-image: url('https://i.imgur.com/wwubhZQ.png');
 	width: 100% !important;
         height: 100% !important;
 	border: solid;
@@ -110,8 +110,9 @@ h4{
 }
 
 p {
-  color: rgba(0, 0, 205, 0.88);
-   font-family: "Lucida Handwriting", cursive; 
+        font-size: 2em;
+	color: rgba(0, 0, 205, 0.88);
+        font-family: "Lucida Handwriting", cursive; 
 }
 
 /*IMAGES AND SHAPING*/	
