--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body { /* no . means element type */
      color:rgba(104, 118, 243, 0.685);
     }
 .about-container .about-markdown{
-   background-image: url('https://i.imgur.com/wwubhZQ.png');
+   background-image: url('https://i.imgur.com/xnZLmtX.jpg');
 	width: 100% !important;
         height: 100% !important;
 	border: solid;
