--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,14 @@ body { /* no . means element type */
 	border: solid;
 	border-width: 0.5px;
 }
+.PaginatedTable.game-history-table.clickable-rows{
+	background-image: url('https://i.imgur.com/xnZLmtX.jpg');
+	width: 100% !important;
+        height: 100% !important;
+	border: solid;
+	border-width: 0.5px;
+}
+	
 
 .container {
     max-width: none !important;
