--- a/styles.css
+++ b/styles.css
@@ -23,17 +23,19 @@ body { /* no . means element type */
 .ratings-container{
 	max-width: none !important;
    background-image: url('https://i.imgur.com/bYP6uD7.jpg');
-	border: solid;
-	border-width: 0.5px;
 }
 .PaginatedTable.game-history-table.clickable-rows{
 	background-image: url('https://i.imgur.com/xnZLmtX.jpg');
 	width: 100% !important;
         height: 100% !important;
-	border: solid;
-	border-width: 0.5px;
 }
 	
+PaginatedTable.review-history-table.clickable-rows {
+	background-image: url('https://i.imgur.com/xnZLmtX.jpg');
+	width: 100% !important;
+        height: 100% !important;
+	border: solid;
+	border-width: 0.5px;
 
 .container {
     max-width: none !important;
