--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ h4{
 }
 
 p {
-	style="font-weight: bold;"
+        font-size: 2em;
 	color: rgba(0, 0, 0, 0.99);
         font-family: "Lucida Handwriting", cursive; 
 }
