--- a/styles.css
+++ b/styles.css
@@ -147,10 +147,7 @@ border-radius: 40px;
 /*ANIMATION*/
 
 .about-container h1 {
-    color:rgba(0, 140, 255, 0.8);
-	/*color:RGBA( 0, 206, 209, 1 );*/
-   font-family: "Lucida Handwriting", cursive; 
-    font-size: 3em;
+    background: url("ihttps://cdnb.artstation.com/p/assets/images/images/052/586/091/original/cecihoney-dragon-flight.gif?1660165746")
     position: absolute;
     width: 100%;
     height: 100%;
