--- a/styles.css
+++ b/styles.css
@@ -156,41 +156,40 @@ border-radius: 40px;
 /*ANIMATION*/
 
 .about-container h1 {
-       color:rgba(0, 140, 255, 0.8);
-	/*color:RGBA( 0, 206, 209, 1 );*/
-    font-family: "Lucida Handwriting", cursive; 
-    font-size: 3em;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    /* Starting position */
-    -moz-transform:translateX(100%);
-    -webkit-transform:translateX(100%);	
-    transform:translateX(100%);
-    /* Apply animation to this element */	
-    -moz-animation: scrolling 15s linear infinite;
-    -webkit-animation: scrolling 15s linear infinite;
-    animation: scrolling 15s linear infinite;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* Starting position */
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  /* Apply animation to this element */	
+  -moz-animation: scrolling 15s linear infinite;
+	background-image: url(https://cdnb.artstation.com/p/assets/images/images/052/586/091/original/cecihoney-dragon-flight.gif?1660165746);
+  background-size: cover;
+  color: transparent;
+  -webkit-animation: scrolling 15s linear infinite;
+  animation: scrolling 15s linear infinite;
 }
 
 /* Move it (define the animation) */
 @-moz-keyframes scrolling {
-    0%   { -moz-transform: translateX(100%); }
-    100% { -moz-transform: translateX(-100%); }
+  0%   { -moz-transform: translateX(100%); }
+  100% { -moz-transform: translateX(-100%); }
 }
 @-webkit-keyframes scrolling {
-    0%   { -webkit-transform: translateX(100%); }
-    100% { -webkit-transform: translateX(-100%); }
+  0%   { -webkit-transform: translateX(100%); }
+  100% { -webkit-transform: translateX(-100%); }
 }
 @keyframes scrolling {
-     0%   { 
-        -moz-transform: translateX(100%); /* Firefox bug fix */
-        -webkit-transform: translateX(100%); /* Firefox bug fix */
-        transform: translateX(100%); 		
-    }
-    100% { 
-        -moz-transform: translateX(-100%); /* Firefox bug fix */
-        -webkit-transform: translateX(-100%); /* Firefox bug fix */
-        transform: translateX(-100%); 
-    }
+  0%   { 
+    -moz-transform: translateX(100%); /* Firefox bug fix */
+    -webkit-transform: translateX(100%); /* Firefox bug fix */
+    transform: translateX(100%); 		
+  }
+  100% { 
+    -moz-transform: translateX(-100%); /* Firefox bug fix */
+    -webkit-transform: translateX(-100%); /* Firefox bug fix */
+    transform: translateX(-100%); 
+  }
 }
