--- a/styles.css
+++ b/styles.css
@@ -160,9 +160,9 @@ border-radius: 40px;
   width: 100%;
   height: 100%;
   /* Starting position */
-  -moz-transform: translateX(100%);
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%);
+  -moz-transform:translateX(100%) translateY(50%);
+-webkit-transform:translateX(100%) translateY(50%);	
+transform:translateX(100%) translateY(50%);
   /* Apply animation to this element */	
   -moz-animation: scrolling 15s linear infinite;
 	background-image: url(https://cdnb.artstation.com/p/assets/images/images/052/586/091/original/cecihoney-dragon-flight.gif?1660165746);
