--- a/styles.css
+++ b/styles.css
@@ -163,13 +163,17 @@ border-radius: 40px;
   transform: translateX(100%) translateY(-100%);
   /* Apply animation to this element */	
   animation: scrolling 15s linear infinite;
-	background-image: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWI4OGUxMDhhYTlhNzU2YzkzNWJiNGU1NTYxZTQ0NTM2MzcyZGY5MyZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PXM/ZDOjDWFTH3W5MahhwW/giphy.gif);
+  background-image: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWI4OGUxMDhhYTlhNzU2YzkzNWJiNGU1NTYxZTQ0NTM2MzcyZGY5MyZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PXM/ZDOjDWFTH3W5MahhwW/giphy.gif);
   background-size: cover;
-  color: transparent;
+  text-indent: -9999px;
 }
 
 /* Move it (define the animation) */
 @keyframes scrolling {
-  0%   { transform: translateX(100%) translateY(-100%); }
-  100% { transform: translateX(-100%) translateY(-100%); }
+  0%   { 
+    transform: translateX(100%) translateY(-100%); 		
+  }
+  100% { 
+    transform: translateX(-100%) translateY(-100%); 
+  }
 }
