--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,9 @@ border-radius: 40px;
   animation: scrolling 15s linear infinite;
   z-index: 9999;
   background-image: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWI4OGUxMDhhYTlhNzU2YzkzNWJiNGU1NTYxZTQ0NTM2MzcyZGY5MyZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PXM/ZDOjDWFTH3W5MahhwW/giphy.gif);
-  background-size: cover;
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
   text-indent: -9999px;
 }
 
