--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,18 @@ margin-right: auto;
 border-radius: 40px;
 }
 
+.about-container h5 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: translateX(70%) translateY(-60%);
+  z-index: 9999;
+  background-image: url(https://i.imgur.com/f0L53M0.gif);
+  background-size: 30%;
+  background-repeat: no-repeat;
+  background-position: center;
+  text-indent: -9999px;
+
 /*ANIMATION*/
 
 .about-container h1 {
