--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,7 @@ border-radius: 40px;
   background-repeat: no-repeat;
   background-position: center;
   text-indent: -9999px;
+}
 
 /*ANIMATION*/
 
