--- a/styles.css
+++ b/styles.css
@@ -153,17 +153,13 @@ margin-right: auto;
 border-radius: 40px;
 }
 
-.about-container h5 {
+.about-container .gif-container {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  transform: translateX(70%) translateY(-60%);
-  z-index: 9999;
-  background-image: url(https://i.imgur.com/f0L53M0.gif);
-  background-size: 30%;
-  background-repeat: no-repeat;
-  background-position: center;
-  text-indent: -9999px;
+  top: 50%;
+  left: 50%;
+  transform: translate(70%, -70%);
+  z-index: 1;
+  max-width: 100%; /* Set the max width of the gif container */
 }
 
 /*ANIMATION*/
