--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ PaginatedTable.review-history-table.clickable-rows {
 	width: 100% !important;
         height: 100% !important;
 	border: solid;
-	border-width: 0.5px;
 }
 .container {
     max-width: none !important;
@@ -142,7 +141,7 @@ span.test{
 
 .image {
 width: 20%;
-border-radius: 20px;
+border-radius: 1.25em;
 margin-left: auto;
 margin-right: auto;
 }
@@ -151,7 +150,7 @@ margin-right: auto;
  width: 7%;
 margin-left: auto;
 margin-right: auto;
-border-radius: 40px;
+border-radius: 2.5em;
 }
 
 .about-container .gif-container {
