--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,10 @@ html, body {
 }
 .PaginatedTable.game-history-table.clickable-rows{
 	background-image: url('https://i.imgur.com/xnZLmtX.jpg');
-	width: 100% !important;
-        height: 100% !important;
+	background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(0,0,0,0);
 }
 	
 PaginatedTable.review-history-table.clickable-rows {
