--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,13 @@ html, body {
   background-color: rgba(0,0,0,0);
 	
 }
+.about-container .gif-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(90%, -50%);
+  z-index: 1;
+  max-width: 50%;
 
 .ratings-container{
 	max-width: none !important;
