--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ PaginatedTable.review-history-table.clickable-rows {
 }
 .container {
     max-width: none !important;
-   background-image: url('https://wallpaperaccess.com/full/1399270.jpg');
+   background-image: url('https://i.imgur.com/AAqvy2Z.png');
 }
 
 .date {
