--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,11 @@ html, body {
      color:rgba(64, 0, 0, 0.9);
     }
 
-.about-container .about-markdown{
+.about-container{
 	
-   background-image: url('https://i.imgur.com/xnZLmtX.jpg');
-	background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: rgba(0,0,0,0);
+   background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  opacity: 0.7;
 	
 }
 
