--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,20 @@ html, body {
    background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   opacity: 0.7;
+}
+
+.about-markdown{
 	
+   background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  opacity: 0.7;
+}
+
+.Card{
+	
+   background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  opacity: 0.7;
 }
 
 .ratings-container{
