--- a/styles.css
+++ b/styles.css
@@ -24,25 +24,13 @@ html, body {
      color:rgba(64, 0, 0, 0.9);
     }
 
-.about-container{
+.about-container .about-markdown{
 	
-   background-color: rgba(0, 0, 0, 0.5) !important;
-  padding: 10px !important;
-  opacity: 0.7 !important;
-}
-
-.about-markdown{
-	
-   background-color: rgba(0, 0, 0, 0.5) !important;
-  padding: 10px !important;
-  opacity: 0.7 !important;
-}
-
-.Card{
-	
-   background-color: rgba(0, 0, 0, 0.5) !important;
-  padding: 10px !important;
-  opacity: 0.7 !important;
+    background-image: url('https://i.imgur.com/xnZLmtX.jpg');
+	background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(0,0,0,0);
 }
 
 .ratings-container{
