--- a/styles.css
+++ b/styles.css
@@ -112,8 +112,8 @@ h4{
 
 p {
         font-size: 1.3em;
-	color: rgba(0, 0, 139, 0.99);
-        font-family: "Lucida Handwriting", cursive; 
+	color: rgba(0, 0, 139, 1);
+        font-family: "papyrus", fantasy; 
 }
 
 /*IMAGES AND SHAPING*/	
