--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html, body {
 
 .about-container .about-markdown{
 	
-    background-image: url('https://i.imgur.com/xnZLmtX.jpg');
+    background-image: url('https://images.pexels.com/videos/3045163/free-video-3045163.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500');
 	background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
