--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,10 @@ PaginatedTable.review-history-table.clickable-rows {
 	display: none !important;
 }
 
+.col-sm-12 {
+	display: none !important;
+}
+
 .col-sm-4{
 	display: none !important;
 }
