--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ PaginatedTable.review-history-table.clickable-rows {
 }
 .container {
     max-width: none !important;
-   background-image: url('https://img5.goodfon.com/wallpaper/nbig/3/fd/drakon-kosmos-planeta-dlinnyi-drakon-fantastika-solntse-zvio.jpg');
+   background-image: url('https://wallpapercave.com/wp/wp2752459.jpg');
 }
 
 .about-container .about-markdown{
