--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ PaginatedTable.review-history-table.clickable-rows {
 }
 .container {
     max-width: none !important;
-   background-image: url('https://wallpapercave.com/wp/wp2752459.jpg');
+   background-image: url('https://i.imgur.com/eqfOtZU.png');
 }
 
 .about-container .about-markdown{
