--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ PaginatedTable.review-history-table.clickable-rows {
 }
 
 .about-container .about-markdown{
-  background-image: url('https://wallpapercave.com/wp/wp8626212.jpg');
+  background-image: url('https://images.pexels.com/videos/3045163/free-video-3045163.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
