--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html, body {
 
 .ratings-container{
 	max-width: none !important;
-   background-image: url('https://i.imgur.com/bYP6uD7.jpg');
+   background-image: url('https://i.pinimg.com/originals/de/83/25/de83259e8c08de288053c3ecaaa72f65.jpg');
 }
 .PaginatedTable.game-history-table.clickable-rows{
 	background-image: url('https://i.imgur.com/xnZLmtX.jpg');
