--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,10 @@ PaginatedTable.review-history-table.clickable-rows {
 	display: none !important;
 }
 
+.NavBar{
+	display: none !important;
+}
+
 
 /*fonts and solors*/
  
