--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,19 @@ html, body {
   opacity: 0.7;
 }
 .PaginatedTable.game-history-table.clickable-rows{
-	
+	background-image: url('https://images.pexels.com/videos/3045163/free-video-3045163.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+	background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(0,0,0,0);
 }
 	
 PaginatedTable.review-history-table.clickable-rows {
-	
+	background-image: url('https://images.pexels.com/videos/3045163/free-video-3045163.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+	background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(0,0,0,0);
 }
 .container {
     max-width: none !important;
