--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,11 @@ html, body {
   background-color: rgba(0,0,0,0);
 }
 
+.Card.activity-card{
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  opacity: 0.7;
+}
 .date {
       color:rgba(255, 255, 255, 1) ;  
 }
