--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,12 @@ html, body {
   padding: 10px;
   opacity: 0.7;
 }
+
+.Card{
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  opacity: 0.7;
+}
 .date {
       color:rgba(255, 255, 255, 1) ;  
 }
