--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,10 @@ html, body {
   opacity: 0.7;
 }
 
-.col-sm-4{
+.Card{
   background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 .date {
       color:rgba(255, 255, 255, 1) ;  
