--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,10 @@ html, body {
 }
 
 .Player-rank{
-        color:rgba(255, 255, 255, 1) ;
-}
+     font-size: 3em;
+     font-family: "papyrus", fantasy;
+     color:rgba(255, 255, 255, 0.8);
+    }
 
 .board_size {
         color:rgba(255, 255, 255, 1) ;
